CAWeb v1.5.8
- Fixed Live Drafts when using New Builder Experience
- Removed redundant Aria label from profile banner

CAWeb v1.5.7
- Fixed various issues with JAWS not reading toggle expanded/collapsed
- Fixed issue with WPForms Confirmation not receiving focus on form submission
- Fixed issue with footer bleeding when using The Events Calendar Plugin
- Fixed issue with Header not loading when using The Events Calendar Plugin

CAWeb v1.5.6a
- Fixed issue with footer bleeding into content on Vanilla WP posts 

CAWeb v1.5.6
- Added new Enable Debug Mode option
- Updated State Template from v5.5.21 to v5.5.23
- Added new vertical field for Profile Banners
- Removed forced title attribute on Divi Image Modules
- Fixed footer structure and removed custom css
- Fixed issue with Header Slideshow Banner Height
- Removed some custom Google Translate CSS and added class names instead
- Fixed issue with Geo Locator not functioning
- Fixed various issues with navigation and removed custom css
- Fixed color contrast ratio for Google Search URL Breadcrumb
- Removed bootstrap.css and combined with admin.css
- Removed bootstrap.js and combined with admin.js
- Removed bootstrap from customizer pages
- Enforced WPCS on login and password reset

CAWeb v1.5.5b
- Fixed various issues related to plugin conflicts with live drafts

CAWeb v1.5.5a
- Fixed issue with Post List Module not rendering when tags were used

CAWeb v1.5.5
- Added function for xmlrpc_enabled filter
- Added missing tabindex attribute to second level links
- Enforced WPCS on inc/functions.php
- Added new transformation to phpDoc template
- Added additional comments to files
- Added setting to phpdoc.dist.xml
- Disabled XML-RPF
- Fixed Copyright double reading
- Fixed issue with live drafts running whenever Divi triggered a Save Post
- Regenerated Font Sheet to fix share-Instagram icon to share-instagram
- Updated placeholder text to show "Search" instead of Search Homepage