@@ -416,6 +416,10 @@ function caweb_save_options( $values = array(), $files = array() ) {
 
 	/* Save CAWeb Options */
 	global $wp_filesystem;
+	if ( ! is_a( $wp_filesystem, 'WP_Filesystem_Base' ) ) {
+		$creds = request_filesystem_credentials( site_url() );
+		wp_filesystem( $creds );
+	}
 
 	foreach ( $values as $opt => $val ) {
 		switch ( $opt ) {
