@@ -1,6 +1,8 @@
 CAWeb v1.5.8
 - Fixed Live Drafts when using New Builder Experience
 - Removed redundant Aria label from profile banner
+- Swapped to the VIP file system creds
+- Swapped to the proper function to get the tmp directory
 
 CAWeb v1.5.7
 - Fixed various issues with JAWS not reading toggle expanded/collapsed
